# Property-Empire

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  ROADMAP.md  main.py  pyproject.toml
companies/: __init__.py  models.py
config/: __init__.py  theme.py
core/: __init__.py  clock.py  engine.py  events.py  save_manager.py  state.py
finance/: __init__.py  models.py  system.py
gameplay/: __init__.py  models.py  service.py
industries/: __init__.py
industries/real_estate/: __init__.py  building_types.json  economy.py  economy_config.json  industry.py  models.py
news/: __init__.py  models.py
npcs/: __init__.py  models.py
tests/: __init__.py  test_companies.py  test_engine.py  test_finance.py  test_npcs.py  test_property_economy.py  test_real_estate.py  test_theme.py  test_vertical_slice.py  test_world.py
ui/: __init__.py  dialogs.py  main_window.py  navigation.py  pages.py  time_bar.py
world/: __init__.py  models.py  starter_world.json  system.py
